force-app/main/default/objects/OrderApi__Receipt_Line__c/fields/Fon_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Fon_Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>OrderApi__Credit_Memo__c</referenceTo>
    <relationshipLabel>Receipt Lines</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>