force-app/main/default/objects/OrderApi__Receipt_Line__c/fields/Fon_Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Fon_Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>