force-app/main/default/objects/OrderApi__Receipt_Line__c/fields/Fon_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Fon_Item_Name__c</fullName>
    <formula>OrderApi__Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>