force-app/main/default/objects/OrderApi__Receipt_Line__c/fields/Fon_Reference_Receipt_Line__c.field-meta.xml
<CustomField>
    <fullName>Fon_Reference_Receipt_Line__c</fullName>
    <label>Reference Receipt Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>