force-app/main/default/objects/OrderApi__Receipt_Line__c/fields/Fon_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fon_Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>